--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>UA ROI Analysis</title>
     <style>
     form{
       font-family: "Lucida Sans Unicode";
@@ -57,16 +57,16 @@
   <h1>ROI Analysis Calculator</h1>
     <form>
   Individual Benefit Estimate:<br>
-  <input type="number" name="individualBenefitEst" id="individualBenefitEst"><button class="smallButton" id= "sumBenEst" onclick="sumGenerator(indivBenefitEstArr)" type="button">Sum Field</button><br>
+  <input type="number" name="individualBenefitEst" id="individualBenefitEst"><br>
   
   Individual Cost Estimate:<br>
-  <input type="number" name="individualCostEst" id="individualCostEst"><button class="smallButton" id= "sumCostEst" onclick="sumGenerator(indivCostEstArr)" type="button">Sum Field</button><br>
+  <input type="number" name="individualCostEst" id="individualCostEst"><br>
   
   Individual Benefit Actual:<br>
-  <input type="number" name="individualBenefitActual" id="individualBenefitActual"><button class="smallButton" id= "sumBenAct" onclick="sumGenerator(indivBenefitActualArr)" type="button">Sum Field</button><br>
+  <input type="number" name="individualBenefitActual" id="individualBenefitActual"><br>
   
   Individual Cost Actual:<br>
-  <input type="number" name="individualCostActual" id="individualCostActual"><button class="smallButton" id= "sumCostAct" onclick="sumGenerator(indivCostActualArr)" type="button">Sum Field</button><br>
+  <input type="number" name="individualCostActual" id="individualCostActual"><br>
   
   <button id= "addEverything" onclick="addNewStuff()" type="button" class="bigButton">Add Fields to Arrays</button><br>
   <div id="display"></div>
