--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       And if you join our premium plan, you won't even have to worry about buying the groceries to track. We have an agreement with farms, fisheries, bakeries, and grocers all over the country that allow us to ship ingredients for individually tailored meals, directly to your doorstep.<br><br> 
       
       Sound good? Then get started by picking from one of the plans below, and take your first step to making yourself better!<br><br>
-      <form action="https://joepezzulla.github.io/ENES462MVP/">
+      <form action="https://joepezzulla.github.io/ENES462MVP/secondpage">
       <button id="freeButton" class="selectButton" type="submit">Free Plan: Access to the tracking app and our gigantic database of nutritional data!<br><br> 0$</button><br><br><br>
       <button id="baseButton" class="selectButton" type="submit">Base Plan: Access to the tracking app and our gigantic database of nutritional data, along with 10 curated meals a week delivered to your door!<br><br> $100 per week</button><br><br><br>
       <button id="premiumButton" class="selectButton" type="submit">Premium Plan: Access to the tracking app and our gigantic database of nutritional data, along with 21 meals a week waiting for you at your door!<br><br> $200 per week</button><br><br><br>
