--- a/secondpage.html
+++ b/secondpage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Dietizer</title>
